API-to-df, API-to-Mongo, update gitignore

--- a/api-to-df.ipynb
+++ b/api-to-df.ipynb
@@ -56,71 +56,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Connect to MongoDB Client"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "from pymongo import MongoClient"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# Connect Client to MongoDB Atlas cluster \n",
-    "client = MongoClient(\"mongodb+srv://grant-west:Howard11@westai-gw.q2bnx.mongodb.net/audit?retryWrites=true&w=majority\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create local \"audit\" database on the fly\n",
-    "db = client[\"audit\"]\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Pull data into MongoDB database collections"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "for collection_name in [\"stations\", \"states\", \"monthly-normals\"]:\n",
-    "    # collect the data from the api\n",
-    "    response = requests.get()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -139,7 +74,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import requests\n",
-    "#import datetime"
+    "#import datetime\n",
+    "\n",
+    "import config"
    ]
   },
   {
@@ -166,16 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define variables\n",
     "# Set api token\n",
-    "mytoken = 'yUACYLIYIXLIsIYsWImwIeXDrueCfzqv'\n",
+    "\n",
+    "mytoken = config.api_token\n",
     "locationid = 'FIPS:25' #location id for Massachusetts (can be found on NOAA or requested as a different API as well)\n",
     "#datasetid = 'NORMAL_MLY' #datset id for \"Monthly Normals\"\n",
-    "datasetid = 'GHCND'\n",
+    "datasetid = 'GHCND' # \"Daily Summaries\"\n",
     "begin_date = '2005-05-01'\n",
     "end_date = '2005-05-31'"
    ]
@@ -197,13 +135,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# testing request syntax\n",
+    "#r = requests.get(\"https://www.ncdc.noaa.gov/cdo-web/api/v2/data?datasetid=NORMAL_MLY&startdate=2010-05-01&enddate=2010-05-01\", headers={'token': mytoken})\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Function to call API, load data into Python, and convert JSON to df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_normals(locationid, datasetid, begin_date, end_date, mytoken, base_url):\n",
     "    token = {'token': mytoken}\n",
     "\n",
     "    #passing as string instead of dict because NOAA API does not like percent encoding\n",
-    "   # params = 'datasetid='+str(datasetid)+'&'+'locationid='+str(locationid)+'&'+'startdate='+str(begin_date)+'&'+'enddate='+str(end_date)\n",
+    "    params = 'datasetid='+str(datasetid)+'&'+'locationid='+str(locationid)+'&'+'startdate='+str(begin_date)+'&'+'enddate='+str(end_date)\n",
     "    \n",
-    "    r = requests.get(\"https://www.ncdc.noaa.gov/cdo-web/api/v2/data?datasetid=NORMAL_MLY&startdate=2010-05-01&enddate=2010-05-01\", headers=token)\n",
+    "    r = requests.get(base_url, params = params, headers=token)\n",
     "    print(\"Request status code: \"+str(r.status_code))\n",
     "\n",
     "    try:\n",
@@ -234,9 +189,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "df_normals.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -244,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_weather(locationid, datasetid, begin_date, end_date, mytoken, base_url):\n",
+    "def get_daily(locationid, datasetid, begin_date, end_date, mytoken, base_url):\n",
     "    token = {'token': mytoken}\n",
     "\n",
     "    #passing as string instead of dict because NOAA API does not like percent encoding\n",
@@ -275,18 +234,7 @@
    },
    "outputs": [],
    "source": [
-    "df_weather = get_weather(locationid, datasetid, begin_date, end_date, mytoken, base_url_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "df_normals.head()"
+    "df_daily = get_daily(locationid, datasetid, begin_date, end_date, mytoken, base_url_data)"
    ]
   },
   {
@@ -295,18 +243,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = requests.get(\"https://www.ncdc.noaa.gov/cdo-web/api/v2/data?datasetid=NORMAL_MLY&startdate=2010-05-01&enddate=2010-05-01\", headers={'token': mytoken})\n"
+    "df_daily.head()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "print(\"Request status code: \"+str(r.status_code))"
+    "## Call API to collect station info"
    ]
   },
   {
@@ -365,7 +309,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_weather.head()"
+    "df_daily.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Merge stations with weather data for lat/long and station info w/ data obs"
    ]
   },
   {
@@ -374,13 +325,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#merge with the weather\n",
+    "#merge stations with the daily weather data\n",
     "\n",
-    "df = df_weather.merge(df_stations, left_on = 'station', right_on = 'id', how='inner')\n",
+    "df = df_daily.merge(df_stations, left_on = 'station', right_on = 'id', how='inner')\n",
     "\n",
     "#Check for missing overlap between station weather info and location info\n",
     "    \n",
-    "location_ismissing = df_weather[~df_weather['station'].isin(df_stations['id'])]\n",
+    "location_ismissing = df_daily[~df_daily['station'].isin(df_stations['id'])]\n",
     "loc_miss_count = len(location_ismissing['station'].unique())\n",
     "if loc_miss_count != 0:\n",
     "    print(\"Missing location data for \"+str(loc_miss_count)+\" stations\")\n",
